--- a/Text_generation_using_RNN.ipynb
+++ b/Text_generation_using_RNN.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "19_MpL3gu4t4zJGnPAIDFRYwh29Sj8m-N",
-      "authorship_tag": "ABX9TyNKIKAijXJkKHgOTiXeEKTD",
+      "authorship_tag": "ABX9TyMNG4QYh79hA0W6sbTUiuBo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "RRcrZUrHhWzi",
         "colab_type": "code",
-        "outputId": "99caf8b7-0ff6-4717-a37c-a030786c1894",
+        "outputId": "f24d4170-4c33-4e4a-f7b4-a585ae43562e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -96,7 +96,7 @@
       "metadata": {
         "id": "BVRRNCmyib5P",
         "colab_type": "code",
-        "outputId": "6a45f53b-bcb5-4e2e-d3ba-d14f00684f32",
+        "outputId": "2941460c-4eb9-48ea-d23e-2b8481dabda0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "j6rqUTswiu5r",
         "colab_type": "code",
-        "outputId": "3d194820-0a0b-4dd0-a17d-81c6f8bcbbb6",
+        "outputId": "1905dcfe-ccd1-47fc-b780-31f77c44c42e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -198,7 +198,7 @@
       "metadata": {
         "id": "Xyd_3vJLjA-v",
         "colab_type": "code",
-        "outputId": "9ade286f-1701-423b-a431-5b123f4e1048",
+        "outputId": "673f1091-26b8-4a78-f2cc-ac173ed80d89",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -247,7 +247,7 @@
       "metadata": {
         "id": "TXFWWgmkjqyu",
         "colab_type": "code",
-        "outputId": "6f764b13-7b00-4c58-e277-01c91b19bc75",
+        "outputId": "f00e86d3-9531-4c5e-fba8-0e991c1de3eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
@@ -311,7 +311,7 @@
       "metadata": {
         "id": "jroDkrLPkAoC",
         "colab_type": "code",
-        "outputId": "7ed7ecc7-8b0e-4937-a7f8-17ce1620fe97",
+        "outputId": "07e483ad-fef1-475e-cfc2-5bbf875afa85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "YWyqN_ZcL2jy",
         "colab_type": "code",
-        "outputId": "f0619313-9e9b-44ee-92e6-988e203c6c87",
+        "outputId": "11cac0e5-7e81-46cf-f7ec-1a2ae0d7f24b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 104
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "rL2sfe9eL89v",
         "colab_type": "code",
-        "outputId": "a404302e-a0cb-4b15-ebe1-9f9958423128",
+        "outputId": "622cf19e-08ac-4186-909f-a42e92b99a99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -408,7 +408,7 @@
       "metadata": {
         "id": "6gSM2wsJMnMq",
         "colab_type": "code",
-        "outputId": "ce9242fd-e66c-4fe2-b429-cd4aa8eb0dcd",
+        "outputId": "0704b285-bdf4-481d-a357-61ab9c37a7e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -437,7 +437,7 @@
       "metadata": {
         "id": "BlBlcNvCM_tg",
         "colab_type": "code",
-        "outputId": "53a945de-5e93-4fb8-b793-aa03f0b2e691",
+        "outputId": "18b0aee4-095d-4072-e4cd-f6f33eb33a05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "LE_KEKkuNUM1",
         "colab_type": "code",
-        "outputId": "075f2950-c915-4a60-85cb-6358c930c051",
+        "outputId": "8af0da9f-8e94-4686-a791-ad2b243b2a45",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -522,7 +522,7 @@
       "metadata": {
         "id": "sId8lKDjN6Ch",
         "colab_type": "code",
-        "outputId": "1c4876bd-f33d-4796-d23b-14f0f65d05b8",
+        "outputId": "3973b066-082e-450c-f891-11a972735881",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -548,7 +548,7 @@
       "metadata": {
         "id": "ZguReuKNN_Ne",
         "colab_type": "code",
-        "outputId": "4838cbb3-9304-490a-be68-c44d405bfde3",
+        "outputId": "641d5663-4cda-4b8a-d784-f229ee723071",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -608,7 +608,7 @@
       "metadata": {
         "id": "9BNeUeLW1pbe",
         "colab_type": "code",
-        "outputId": "fb62f47d-549e-47a7-ad72-ea6bc7673010",
+        "outputId": "5a3e9f2d-a98f-4fb1-cad8-ccfe48abb554",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -639,7 +639,7 @@
       "metadata": {
         "id": "EYjLxt7g1tnZ",
         "colab_type": "code",
-        "outputId": "fffa1bdb-b142-4096-e9cf-9eee139cb0b6",
+        "outputId": "8373a969-0235-4dc6-fda6-a9372214847c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 572
@@ -714,7 +714,7 @@
       "metadata": {
         "id": "HPrwaXkYLeIh",
         "colab_type": "code",
-        "outputId": "e6bcefdf-f9ae-4070-9015-195aee41f818",
+        "outputId": "8fb05bc4-5297-4826-c5f8-66601440a151",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -775,7 +775,7 @@
       "metadata": {
         "id": "5LtfgIj0MjAf",
         "colab_type": "code",
-        "outputId": "afdd92c8-5ae1-40a6-9ef0-f50a79a11d0a",
+        "outputId": "821523c5-c18c-45a8-b250-5d3231cd83ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -806,7 +806,7 @@
       "metadata": {
         "id": "F5y4CnmxMmBx",
         "colab_type": "code",
-        "outputId": "66002e40-3bc2-4417-9f04-bc0882d838fd",
+        "outputId": "67f86b6c-cb6f-4b56-c41f-e7ba15ab1097",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
@@ -889,7 +889,7 @@
       "metadata": {
         "id": "AquQW5lmx6AH",
         "colab_type": "code",
-        "outputId": "5d0cde7d-1b4a-4e00-c605-118e4971465c",
+        "outputId": "d1dc584c-46b1-4d61-afc0-0c36383b83e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -995,7 +995,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 451
         },
-        "outputId": "eea46cbc-77a7-466c-897f-d89316cad264"
+        "outputId": "70373562-db93-48a1-a9df-b73ab4c3ea74"
       },
       "source": [
         "help(sparse_categorical_crossentropy)"
@@ -1655,25 +1655,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 260
         },
-        "outputId": "342d94b4-ab82-481a-db55-a76490b7217a"
+        "outputId": "67dd20b1-d62c-4598-b628-6e886a71db3d"
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 35,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_1\"\n",
+            "Model: \"sequential\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "embedding_1 (Embedding)      (1, None, 64)             5376      \n",
+            "embedding (Embedding)        (1, None, 64)             5376      \n",
             "_________________________________________________________________\n",
-            "gru_1 (GRU)                  (1, None, 1026)           3361176   \n",
+            "gru (GRU)                    (1, None, 1026)           3361176   \n",
             "_________________________________________________________________\n",
-            "dense_1 (Dense)              (1, None, 84)             86268     \n",
+            "dense (Dense)                (1, None, 84)             86268     \n",
             "=================================================================\n",
             "Total params: 3,452,820\n",
             "Trainable params: 3,452,820\n",
@@ -1746,6 +1746,63 @@
         "      text_generated.append(ind_to_char[predicted_id])\n",
         "\n",
         "  return (start_seed + ''.join(text_generated))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8-rucBu8lXut",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 364
+        },
+        "outputId": "e6d07798-1ef7-4aa6-bdc8-2a3f0008bf40"
+      },
+      "source": [
+        "print(generate_text(model,\"flower\",gen_size=1000))"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "flower.\n",
+            "  MARCUS. Sweet lam, thou art in Mary her by a stranger hard at him;\n",
+            "    And, fair notest like Andren!\n",
+            "  AGUECHEEK. I hear you something.  \n",
+            "  VIOLA. I hear it to another, never trust my hand\n",
+            "    To march along in me;  \n",
+            "    For, by my mind, thy peasands to procure me in my weakness and despis'd\n",
+            "    Together send nothing. Tes mew'st not to fear.\n",
+            "  KING PHILIP. Whether would you be avery to keep some decest?\n",
+            "  FIRST WATCH. Did he not walk in this,\n",
+            "    How far all Greeks, have drink to heed of melancholy, which imitate torcle, I prithee,\n",
+            "    worthy us, as cut them drown'd? His spaling shall be sequest, laughs are-\n",
+            "    Signior Bunchief faith ry.\n",
+            "  ADRAMAND. Lords, Northumberland, to our sister is-bodicing,\n",
+            "    and be patiently being made with so much when his shrieks of fiery worms, lady!\n",
+            "    O, you must claim the King, stay not better than\n",
+            "    within the jart.\n",
+            "  OLIVIA. Give me your hand. Offord, thou shalt not leave on.\n",
+            "  MALVOLIO. Most gladly, my lord.\n",
+            "  KING HENRY. Unto the wanton and\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5ojq8CLYl2Q7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
